# benchmark-fastx-io

./: .gitignore  Cargo.toml  readme.md
benches/: 01_fa_bench.rs  02_fq_bench.rs  03_fa_parallel_bench.rs  04_fq_parallel_bench.rs
reports/: fastx_benchmarks.md  fastx_plots.md  multi_thread.md
src/: fasta_parser.rs  fastq_parser.rs  lib.rs  main.rs  utils.rs
src/parallel/: fasta_manu.rs  fasta_parallel.rs  fastq_manu.rs  fastx_parallel.rs  mod.rs  record.rs
src/singular/: fasta_parser.rs  fastq_parser.rs  mod.rs
src/utils/: dna.rs  mod.rs  utils.rs
tests/: test_01_fa_bench.rs  test_02_fq_bench.rs  test_03_fa_parallel.rs  test_04_fq_parallel.rs
