[package]
name = "test-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
bio = "3.0.0"
clap = { version = "4.5.51", features = ["derive"] }
criterion = "0.7.0"
flate2 = "1.1.5"
noodles-fasta = "0.57.0"
noodles-fastq = "0.21.0"

[[bench]]
name = "01_fa_bench"
harness = false

[[bench]]
name = "02_fq_bench"
harness = false
